--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@nuxt/eslint": "^1.2.0",
     "@nuxthub/core": "^0.8.18",
+    "@unovis/ts": "^1.5.1",
+    "@unovis/vue": "^1.5.1",
     "nuxt": "^3.16.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
